test/libsolidity/syntaxTests/constants/constant_unassigned.sol
uint constant x;
// ----
// TypeError 4266: (0-15): Uninitialized "constant" variable.
